# patchman

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: publish.yml  test.yml
src/: App.tsx  api.ts  i18next.d.ts  main.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  request.rs  state.rs
src-tauri/src/config/: mod.rs
src/components/: CodeMirror.tsx  Editor.tsx  HorizontalDivision.tsx  KeyValueTableInput.tsx  MuiLink.tsx  StyledEditor.tsx
src/components/Editor/: index.tsx
src/components/Sidebar/: index.tsx
src/components/WorkspaceEditor/: index.tsx  workspaceSidebar.tsx
src/components/WorkspaceEditor/History/: HistoryListItem.tsx  index.tsx
src/components/workspaceEditor/: index.tsx  workspaceSidebar.tsx
src/hooks/: index.ts  usePreferences.tsx  useRequestBody.ts  useRequestBody.tsx  useRequestHistory.ts  useResponseBody.ts  useResponseBody.tsx
src/sections/: index.tsx
src/sections/RequestBuilder/: UrlBar.tsx  index.tsx  requestResponse.tsx  urlBar.tsx
src/sections/RequestBuilder/BodyBuilder/: HeaderBuilder.tsx  ParamsBuilder.tsx  RequestBodyBuilder.tsx  authBuilder.tsx  headerBuilder.tsx  index.tsx  paramsBuilder.tsx  requestBodyBuilder.tsx
src/sections/RequestBuilder/RequestResponse/: ResponseBody.tsx  ResponseHeaders.tsx  (+1 more)
src/sections/__tests__/: index.test.tsx
src/translations/: en.json  es.json  fr.json
(+1 files in other folders)
