[package]
name = "patchman"
version = "0.0.17"
description = "A Tauri App"
authors = ["Devin Bidwell <dbidwell94@biddydev.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
tauri = { version = "^1", features = ["api-all"] }
reqwest = { version = "^0.12" }
lazy_static = "^1.4"
platform-dirs = "^0.3"
pgp = { version = "^0.11" }
whoami = { version = "^1.5" }

[dev-dependencies]
tokio = {version = "1.21.2", features = ["macros"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
